# python_recipes

./: .gitignore  .gitmodules  LICENSE
MBTR/: mbtr.ipynb
arguments/: args.ipynb
ase/: cli.py  nomad_upload.py
ask_generator/: iter_class.ipynb
basics/: namedtuple.ipynb  namedtuple.py  nested_loop.ipynb  progressbar.py
caching/: caching.ipynb  caching_dataset.ipynb  hash_large_file.py  xrcache.py
classmethods/: alternative_constructor.ipynb  property.ipynb
click/: embed_fonts.py
click/hilde_cli/: pyproject.toml
click/hilde_cli/examples/: geometry.in  settings.in
click/hilde_cli/hilde_cli/: cli.py
click/hilde_cli/hilde_cli/templates/settings/: aims_full
configparser/: configparser.ipynb  highaims_settings.conf
cython/: .gitignore  setup.py
database/: sqlite.ipynb  sqlite.py
dict/: dict.ipynb
email/: 100047  cobra_mail_statistics.ipynb  email_parser.ipynb
generator_yield/: yield.ipynb
generators/: iter_class.ipynb
graphs_networkx/: networkx_parallel.ipynb
gspread/: essentials.ipynb
hashlib/: hashlib.ipynb
json/: json_array.ipynb
mathematics/: circular_mean.ipynb  eigenvalue_problem.ipynb  notebook_damped-harmonic-oscillator_kramers-kronig-relations.ipynb
numerics/: numpy_multiprocess.ipynb  numpy_pairs_of_arrays.ipynb
pandas/: Dataframes.ipynb  converge_forces.ipynb
parameters/: join_params.ipynb  params.py
pathlib/: jan_script.ipynb  pathlib.ipynb
physics/: eigenvalue_problem.ipynb
progressbar/: progressbar.ipynb
scripts/: jan_script.ipynb
sobol/: SALib.ipynb
ssh/: fabric.ipynb
tensorflow/: intro1.ipynb
(+524 files in other folders)
