[tool.black]
py36 = true

[tool.poetry]
name = "hilde_cli"
version = "0.1.0"
description = ""
authors = ["Florian Knoop <knoop@fhi-berlin.mpg.de>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
attr = "^0.3.1"
click_completion = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
poetry = "^0.12.16"
lockfile = "^0.12.2"
black = "^18.9b0"

[tool.poetry.scripts]
hilde = 'hilde_cli.cli:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
